# ShortSwordSlicer

./: .gitignore  CMakeLists.txt  ConcatenatedHeader.h  README.md  ShortSwordSlicer.cpp  sss.aps  sss.rc
